--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,5 @@
 {{define "main"}}
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 <div class="home-container">
     <h1>Welcome to my page</h1>
@@ -8,4 +9,15 @@
         <li><a href="/about/">Aboutus</a></li>
     </ul>
 </div>
+<script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+  </script> 
 {{end}}
